--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
