--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.5.0",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
